finishing di in some places

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,6 +20,7 @@ coroutine = "1.7.3"
 retrofit = "2.9.0"
 okhttp = "4.11.0"
 annotation = "1.7.1"
+koin = "3.5.6"
 
 
 [libraries]
@@ -59,6 +60,9 @@ retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = 
 retrofit-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit" }
 okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp" }
 androidx-annotation = { group = "androidx.annotation", name = "annotation", version.ref = "annotation" }
+
+# Koin
+koin-android = { group = "io.insert-koin", name = "koin-android", version.ref = "koin" }
 
 
 [plugins]
